kde4libs (4:3.92.0.dfsg.1-2) experimental; urgency=low

  +++ Changes by Fathi Boudra:

  * Add patch to support strigi-0.5.5.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * No shipping emoticons images to avoid conflicts with current kdebase-data
    (KDE3). See list in no-install.list.
  * Add patch 04_libkdeprint_management_soname.diff to avoid same soname name 
    than in current KDE version. 

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 11 Aug 2007 19:33:41 +0200

kde4libs (4:3.92.0.dfsg.1-1) experimental; urgency=low

  * KDE4 beta 1, first upload to the Debian archive.
  * Update *.install files.
  * Prune non-free files, added script prune-nonfree.
  * Add patches:
    * 01_kdehome_kde4: set kdehome directory to .kde4.
    * 02_applications_menu_kde4: append .kde4 to applications.menu.
  * Add warning about experimental packages in README.Debian.
  * Remade the copyright file, thanks to  Marc 'HE' Brockschmidt, for
    sharing the fun.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Mon, 06 Aug 2007 16:38:29 +0200

kde4libs (4:3.91.0-1) alioth; urgency=low

  * New alpha. 

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sun, 01 Jul 2007 16:12:54 +0200

kde4libs (4:3.90+svn20070601-r670402-1) alioth; urgency=low

  * Initial release of KDE4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 10 May 2007 16:02:37 +0100
