@@ -1,7 +1,7 @@
 usr/bin/checkXML
 usr/bin/js
 usr/bin/kbuildsycoca4
-usr/bin/kconfig_compiler
+usr/bin/kconfig_compiler4
 usr/bin/kcookiejar4
 usr/bin/kde4-config
 usr/bin/kde4automoc
@@ -13,13 +13,13 @@ usr/bin/kjscmd
 usr/bin/kjsconsole
 usr/bin/kross
 usr/bin/kshell4
-usr/bin/ksvgtopng
-usr/bin/kunittestmodrunner
+usr/bin/ksvgtopng4
+usr/bin/kunittestmodrunner4
 usr/bin/kwrapper4
-usr/bin/makekdewidgets
+usr/bin/makekdewidgets4
 usr/bin/meinproc4
 usr/bin/nepomuk-rcgen
-usr/bin/preparetips
+usr/bin/preparetips4
 
 usr/lib/libkdeinit4_kaddprinterwizard.so
 usr/lib/libkdeinit4_klauncher.so
