@@ -1,3 +1,10 @@
 #!/usr/bin/make -f
 
 include debian/cdbs/kde.mk
+
+build/kdelibs-bin::
+	mv $(CURDIR)/debian/tmp/usr/bin/kunittestmodrunner $(CURDIR)/debian/tmp/usr/bin/kunittestmodrunner4
+	mv $(CURDIR)/debian/tmp/usr/bin/makekdewidgets $(CURDIR)/debian/tmp/usr/bin/makekdewidgets4
+	mv $(CURDIR)/debian/tmp/usr/bin/preparetips $(CURDIR)/debian/tmp/usr/bin/preparetips4
+	mv $(CURDIR)/debian/tmp/usr/bin/kconfig_compiler $(CURDIR)/debian/tmp/usr/bin/kconfig_compiler4
+	mv $(CURDIR)/debian/tmp/usr/bin/ksvgtopng $(CURDIR)/debian/tmp/usr/bin/ksvgtopng4
