@@ -10,6 +10,8 @@ kde4libs (4:3.92.0.dfsg.1-2) experimental; urgency=low
     (KDE3). See list in no-install.list.
   * Add patch 04_libkdeprint_management_soname.diff to avoid same soname name 
     than in current KDE version. 
+  * Rename kunittestmodrunner, makekdewidgets, preparetips, kconfig_compiler,
+    ksvgtopng ending in 4 to avoid conflicts with the current versions. 
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 11 Aug 2007 19:33:41 +0200
 
